# mcp-server-youtube-transcript-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml
src/mcp_youtube/: __init__.py  config.py  formatters.py  healthcheck.py  logging_setup.py  server.py
src/mcp_youtube/clients/: youtube.py
tests/: test_formatters.py  test_server_tools.py  test_smoke_live.py
