[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-youtube"
version = "0.1.0"
description = "MCP server for fetching YouTube transcripts and shaping them as research-ready markdown."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Pete Stergion" }]
keywords = ["mcp", "youtube", "transcript", "fastmcp", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing",
]
dependencies = [
    "fastmcp==3.2.4",
    "youtube-transcript-api==1.2.4",
    "uvicorn==0.46.0",
    "python-dotenv==1.2.2",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.12",
]

[project.scripts]
mcp-youtube = "mcp_youtube.server:main"
mcp-youtube-healthcheck = "mcp_youtube.healthcheck:main"

[project.urls]
Homepage = "https://github.com/pete-builds/mcp-server-youtube-transcript-scraper"
Repository = "https://github.com/pete-builds/mcp-server-youtube-transcript-scraper"
Issues = "https://github.com/pete-builds/mcp-server-youtube-transcript-scraper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_youtube = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
